docs/upbound-provider-aws/0.21/ec2/v1beta1/index.md
---
permalink: /upbound-provider-aws/0.21/ec2/v1beta1/
---

# ec2.v1beta1



* [availabilityZoneGroup](availabilityZoneGroup.md)
* [capacityReservation](capacityReservation.md)
* [carrierGateway](carrierGateway.md)
* [defaultRouteTable](defaultRouteTable.md)
* [defaultSubnet](defaultSubnet.md)
* [defaultVPC](defaultVPC.md)
* [defaultVPCDHCPOptions](defaultVPCDHCPOptions.md)
* [ebsDefaultKMSKey](ebsDefaultKMSKey.md)
* [ebsEncryptionByDefault](ebsEncryptionByDefault.md)
* [ebsSnapshot](ebsSnapshot.md)
* [ebsSnapshotCopy](ebsSnapshotCopy.md)
* [ebsSnapshotImport](ebsSnapshotImport.md)
* [ebsVolume](ebsVolume.md)
* [egressOnlyInternetGateway](egressOnlyInternetGateway.md)
* [eip](eip.md)
* [eipAssociation](eipAssociation.md)
* [flowLog](flowLog.md)
* [host](host.md)
* [instance](instance.md)
* [internetGateway](internetGateway.md)
* [keyPair](keyPair.md)
* [launchTemplate](launchTemplate.md)
* [mainRouteTableAssociation](mainRouteTableAssociation.md)
* [managedPrefixList](managedPrefixList.md)
* [managedPrefixListEntry](managedPrefixListEntry.md)
* [natGateway](natGateway.md)
* [networkACL](networkACL.md)
* [networkACLRule](networkACLRule.md)
* [networkInsightsPath](networkInsightsPath.md)
* [networkInterface](networkInterface.md)
* [networkInterfaceAttachment](networkInterfaceAttachment.md)
* [networkInterfaceSgAttachment](networkInterfaceSgAttachment.md)
* [placementGroup](placementGroup.md)
* [route](route.md)
* [routeTable](routeTable.md)
* [routeTableAssociation](routeTableAssociation.md)
* [securityGroup](securityGroup.md)
* [securityGroupRule](securityGroupRule.md)
* [serialConsoleAccess](serialConsoleAccess.md)
* [spotDatafeedSubscription](spotDatafeedSubscription.md)
* [spotInstanceRequest](spotInstanceRequest.md)
* [subnet](subnet.md)
* [subnetCidrReservation](subnetCidrReservation.md)
* [trafficMirrorFilter](trafficMirrorFilter.md)
* [trafficMirrorFilterRule](trafficMirrorFilterRule.md)
* [transitGateway](transitGateway.md)
* [transitGatewayConnect](transitGatewayConnect.md)
* [transitGatewayMulticastDomain](transitGatewayMulticastDomain.md)
* [transitGatewayMulticastDomainAssociation](transitGatewayMulticastDomainAssociation.md)
* [transitGatewayMulticastGroupMember](transitGatewayMulticastGroupMember.md)
* [transitGatewayMulticastGroupSource](transitGatewayMulticastGroupSource.md)
* [transitGatewayPeeringAttachment](transitGatewayPeeringAttachment.md)
* [transitGatewayPrefixListReference](transitGatewayPrefixListReference.md)
* [transitGatewayRoute](transitGatewayRoute.md)
* [transitGatewayRouteTable](transitGatewayRouteTable.md)
* [transitGatewayRouteTableAssociation](transitGatewayRouteTableAssociation.md)
* [transitGatewayRouteTablePropagation](transitGatewayRouteTablePropagation.md)
* [transitGatewayVPCAttachment](transitGatewayVPCAttachment.md)
* [transitGatewayVPCAttachmentAccepter](transitGatewayVPCAttachmentAccepter.md)
* [volumeAttachment](volumeAttachment.md)
* [vpc](vpc.md)
* [vpcEndpoint](vpcEndpoint.md)
* [vpcEndpointConnectionNotification](vpcEndpointConnectionNotification.md)
* [vpcEndpointRouteTableAssociation](vpcEndpointRouteTableAssociation.md)
* [vpcEndpointService](vpcEndpointService.md)
* [vpcEndpointServiceAllowedPrincipal](vpcEndpointServiceAllowedPrincipal.md)
* [vpcEndpointSubnetAssociation](vpcEndpointSubnetAssociation.md)
* [vpcPeeringConnection](vpcPeeringConnection.md)
* [vpcdhcpOptions](vpcdhcpOptions.md)
* [vpcdhcpOptionsAssociation](vpcdhcpOptionsAssociation.md)
* [vpciPv4CidrBlockAssociation](vpciPv4CidrBlockAssociation.md)